# postman-bot

./: Cargo.toml  Dockerfile  readme.md
.github/workflows/: docker.yml  rust.yml
src/: main.rs
