[package]
name = "marker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros", "webhooks-axum"] }
pretty_env_logger = "0.4.0"
log = "0.4.17"
tokio = { version =  "1.27", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = "debuginfo"
