[package]
name = "postman-bot"
version = "0.0.4"
edition = "2021"
authors = ["Ivan Reshetnikov <ordinarydev@protonmail.com>"]
description = "A simple bot for getting a telegram chat ID"
readme = "readme.md"
repository = "https://github.com/yenisei-labs/postman-bot"
license = "MIT"

[dependencies]
teloxide = { version = "0.12.2", features = ["macros", "webhooks-axum"] }
pretty_env_logger = "0.5.0"
log = "0.4.19"
tokio = { version =  "1.29", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = "debuginfo"
